cosmos/steamaudio-sys/src/bindings.rs

#[doc = " Encodes a point source into Ambisonics. Given a point source with some direction relative to the listener, this\neffect generates an Ambisonic audio buffer that approximates a point source in the given direction. This allows\nmultiple point sources and ambiences to mixed to a single Ambisonics buffer before being spatialized."]
pub type IPLAmbisonicsEncodeEffect = *mut _IPLAmbisonicsEncodeEffect_t;
#[doc = " Settings used to create an Ambisonics encode effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsEncodeEffectSettings {
    #[doc = " Maximum Ambisonics order to encode audio buffers to."]
    pub maxOrder: IPLint32,
}
#[doc = " Parameters for applying an Ambisonics encode effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsEncodeEffectParams {
    #[doc = " Vector pointing from the listener towards the source. Need not be normalized; Steam Audio will automatically\nnormalize this vector. If a zero-length vector is passed, the output will be order 0 (omnidirectional)."]
    pub direction: IPLVector3,
    #[doc = " Ambisonic order of the output buffer. May be less than the \\c maxOrder specified when creating the effect,\nin which case the effect will generate fewer output channels, reducing CPU usage."]
    pub order: IPLint32,
}
extern "C" {
    #[doc = " Creates an Ambisonics encode effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the Ambisonics encode effect.\n\\param  effect          [out] The created Ambisonics encode effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplAmbisonicsEncodeEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLAmbisonicsEncodeEffectSettings,
        effect: *mut IPLAmbisonicsEncodeEffect,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an Ambisonics encode effect.\n\n\\param  effect  The Ambisonics encode effect to retain a reference to.\n\n\\return The additional reference to the Ambisonics encode effect."]
    pub fn iplAmbisonicsEncodeEffectRetain(
        effect: IPLAmbisonicsEncodeEffect,
    ) -> IPLAmbisonicsEncodeEffect;
}
extern "C" {
    #[doc = " Releases a reference to an Ambisonics encode effect.\n\n\\param  effect  The Ambisonics encode effect to release a reference to."]
    pub fn iplAmbisonicsEncodeEffectRelease(effect: *mut IPLAmbisonicsEncodeEffect);
}
extern "C" {
    #[doc = " Resets the internal processing state of an Ambisonics encode effect.\n\n\\param  effect  The Ambisonics encode effect to reset."]
    pub fn iplAmbisonicsEncodeEffectReset(effect: IPLAmbisonicsEncodeEffect);
}
extern "C" {
    #[doc = " Applies an Ambisonics encode effect to an audio buffer.\n\nThis effect CANNOT be applied in-place.\n\n\\param  effect  The Ambisonics encode effect to apply.\n\\param  params  Parameters for applying the effect.\n\\param  in      The input audio buffer. Must be 1-channel.\n\\param  out     The output audio buffer. Must have as many channels as needed for the\nAmbisonics order specified when creating the effect.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE to indicate that this effect does not generate any tail samples."]
    pub fn iplAmbisonicsEncodeEffectApply(
        effect: IPLAmbisonicsEncodeEffect,
        params: *mut IPLAmbisonicsEncodeEffectParams,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
extern "C" {
    #[doc = " Returns the number of tail samples remaining in an Ambisonics encode effect's internal buffers.\n\nTail samples are audio samples that should be played even after the input to the effect has stopped\nplaying and no further input samples are available.\n\n\\param  effect  The Ambisonics encode effect.\n\n\\return The number of tail samples remaining."]
    pub fn iplAmbisonicsEncodeEffectGetTailSize(effect: IPLAmbisonicsEncodeEffect) -> IPLint32;
}
extern "C" {
    #[doc = " Retrieves a single frame of tail samples from an Ambisonics encode effect's internal buffers.\n\nAfter the input to the Ambisonics encode effect has stopped, this function must be called instead of\n\\c iplAmbisonicsEncodeEffectApply until the return value indicates that no more tail samples remain.\n\n\\param  effect  The Ambisonics encode effect.\n\\param  out     The output audio buffer. Must have as many channels as needed for the\nAmbisonics order specified when creating the effect.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplAmbisonicsEncodeEffectGetTail(
        effect: IPLAmbisonicsEncodeEffect,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLAmbisonicsPanningEffect_t {
    _unused: [u8; 0],
}
#[doc = " Renders Ambisonic audio by panning it to a standard speaker layout. This involves calculating signals to emit\nfrom each speaker so as to approximate the Ambisonic sound field."]
pub type IPLAmbisonicsPanningEffect = *mut _IPLAmbisonicsPanningEffect_t;
#[doc = " Settings used to create an Ambisonics panning effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsPanningEffectSettings {
    #[doc = " The speaker layout that will be used by output audio buffers."]
    pub speakerLayout: IPLSpeakerLayout,
    #[doc = " The maximum Ambisonics order that will be used by input audio buffers."]
    pub maxOrder: IPLint32,
}
#[doc = " Parameters for applying an Ambisonics panning effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsPanningEffectParams {
    #[doc = " Ambisonic order of the input buffer. May be less than the \\c maxOrder specified when creating the effect,\nin which case the effect will process fewer input channels, reducing CPU usage."]
    pub order: IPLint32,
}
extern "C" {
    #[doc = " Creates an Ambisonics panning effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the Ambisonics panning effect.\n\\param  effect          [out] The created Ambisonics panning effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplAmbisonicsPanningEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLAmbisonicsPanningEffectSettings,
        effect: *mut IPLAmbisonicsPanningEffect,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an Ambisonics panning effect.\n\n\\param  effect  The Ambisonics panning effect to retain a reference to.\n\n\\return The additional reference to the Ambisonics panning effect."]
    pub fn iplAmbisonicsPanningEffectRetain(
        effect: IPLAmbisonicsPanningEffect,
    ) -> IPLAmbisonicsPanningEffect;
}
extern "C" {
    #[doc = " Releases a reference to an Ambisonics panning effect.\n\n\\param  effect  The Ambisonics panning effect to release a reference to."]
    pub fn iplAmbisonicsPanningEffectRelease(effect: *mut IPLAmbisonicsPanningEffect);
}
extern "C" {
    #[doc = " Resets the internal processing state of an Ambisonics panning effect.\n\n\\param  effect  The Ambisonics panning effect to reset."]
    pub fn iplAmbisonicsPanningEffectReset(effect: IPLAmbisonicsPanningEffect);
}
extern "C" {
    #[doc = " Applies an Ambisonics panning effect to an audio buffer.\n\nThis effect CANNOT be applied in-place.\n\n\\param  effect  The Ambisonics panning effect to apply.\n\\param  params  Parameters for applying the effect.\n\\param  in      The input audio buffer. Must have as many channels as needed for the Ambisonics order\nspecified in the parameters.\n\\param  out     The output audio buffer. Must have as many channels as needed for the speaker layout\nspecified when creating the effect.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE to indicate that this effect does not generate any tail samples."]
    pub fn iplAmbisonicsPanningEffectApply(
        effect: IPLAmbisonicsPanningEffect,
        params: *mut IPLAmbisonicsPanningEffectParams,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
extern "C" {
    #[doc = " Returns the number of tail samples remaining in an Ambisonics panning effect's internal buffers.\n\nTail samples are audio samples that should be played even after the input to the effect has stopped\nplaying and no further input samples are available.\n\n\\param  effect  The Ambisonics panning effect.\n\n\\return The number of tail samples remaining."]
    pub fn iplAmbisonicsPanningEffectGetTailSize(effect: IPLAmbisonicsPanningEffect) -> IPLint32;
}
extern "C" {
    #[doc = " Retrieves a single frame of tail samples from a Ambisonics panning effect's internal buffers.\n\nAfter the input to the Ambisonics panning effect has stopped, this function must be called instead of\n\\c iplAmbisonicsPanningEffectApply until the return value indicates that no more tail samples remain.\n\n\\param  effect  The Ambisonics panning effect.\n\\param  out     The output audio buffer. Must have as many channels as needed for the speaker layout\nspecified when creating the effect.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILREMAINING if any tail samples remain in the effect's internal buffers, or\n\\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE otherwise."]
    pub fn iplAmbisonicsPanningEffectGetTail(
        effect: IPLAmbisonicsPanningEffect,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLAmbisonicsBinauralEffect_t {
    _unused: [u8; 0],
}
#[doc = " Renders Ambisonic audio using HRTF-based binaural rendering. This results in more immersive spatialization of the\nAmbisonic audio as compared to using an Ambisonics panning effect, at the cost of slightly increased CPU usage."]
pub type IPLAmbisonicsBinauralEffect = *mut _IPLAmbisonicsBinauralEffect_t;
#[doc = " Settings used to create an Ambisonics binaural effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsBinauralEffectSettings {
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
    #[doc = " The maximum Ambisonics order that will be used by input audio buffers."]
    pub maxOrder: IPLint32,
}
#[doc = " Parameters for applying an Ambisonics binaural effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAmbisonicsBinauralEffectParams {
    #[doc = " The HRTF to use."]
    pub hrtf: IPLHRTF,
    #[doc = " Ambisonic order of the input buffer. May be less than the \\c maxOrder specified when creating the effect,\nin which case the effect will process fewer input channels, reducing CPU usage."]
    pub order: IPLint32,
}
extern "C" {
    #[doc = " Creates an Ambisonics binaural effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the Ambisonics binaural effect.\n\\param  effect          [out] The created Ambisonics binaural effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplAmbisonicsBinauralEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLAmbisonicsBinauralEffectSettings,
        effect: *mut IPLAmbisonicsBinauralEffect,
    ) -> IPLerror;
}
